# CorrelatingWithoutConfidence

./: LICENSE  README.md
Python/: example.html  example.ipynb  example_multiple_metrics.html  example_multiple_metrics.ipynb  pyproject.toml  requirements.txt
Python/additional_functions/: correlation_with_confidence.py
Python/metrics_values/: CID2013.csv  CID2013_copyright_notice.txt
Python/metrics_values/CID2013_pyiqa_metrics/: CID2013_brisque.csv  CID2013_clipiqa+.csv  CID2013_dbcnn.csv  CID2013_hyperiqa.csv  CID2013_maniqa.csv  CID2013_niqe.csv  CID2013_paq2piq.csv  CID2013_topiq_nr.csv  CID2013_tres.csv  CID2013_wadiqam_nr.csv
Python/metrics_values/CSIQ_pyiqa_metrics/: CSIQ_dists.csv  CSIQ_fsim.csv  CSIQ_lpips-vgg.csv  CSIQ_lpips.csv  CSIQ_ms_ssim.csv  CSIQ_pieapp.csv  CSIQ_psnr.csv  CSIQ_psnry.csv  CSIQ_ssim.csv  CSIQ_topiq_fr.csv  CSIQ_vif.csv  CSIQ_wadiqam_fr.csv
Python/metrics_values/KADID-10k_pyiqa_metrics/: KADID-10k_dists.csv  KADID-10k_fsim.csv  KADID-10k_lpips-vgg.csv  KADID-10k_lpips.csv  KADID-10k_ms_ssim.csv  KADID-10k_pieapp.csv  KADID-10k_psnr.csv  KADID-10k_psnry.csv  KADID-10k_ssim.csv  KADID-10k_topiq_fr.csv  KADID-10k_vif.csv  KADID-10k_wadiqam_fr.csv
Python/metrics_values/KonIQ-10k_pyiqa_metrics/: KonIQ-10k_brisque.csv  KonIQ-10k_clipiqa+.csv  KonIQ-10k_dbcnn.csv  KonIQ-10k_hyperiqa.csv  KonIQ-10k_maniqa.csv  KonIQ-10k_niqe.csv  KonIQ-10k_paq2piq.csv  KonIQ-10k_topiq_nr.csv  KonIQ-10k_tres.csv  KonIQ-10k_wadiqam_nr.csv
Python/pyiqa_scripts/: fr_csiq.py  fr_kadid10k.py  fr_lfdd_lgp.py  fr_tid2013.py  nr_CID.py  nr_koniq10k.py
(+34 files in other folders)
