[project]
name = "corr-confidence"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.27.0",
    "llvmlite>=0.43.0",
    "matplotlib>=3.9.2",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyiqa>=0.1.12",
    "scipy>=1.14.1",
]
